k8s/database-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-db-service
  namespace: autohub
spec:
  type: ExternalName
  externalName: autohub-mongo.c7x8y9z0.us-east-1.docdb.amazonaws.com
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
